# wifi-offloading-services

./: .clang-format  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  Makefile  Makefile-dev.mk  Makefile-openwrt.mk  README.md  VERSION  build_test.sh  build_with_docker.sh  compile  compile.sh  config-infra.excalidraw  dev  env.txt  firmware-services-diagram.excalidraw  format-c  generate-compile-commands.sh  justfile  release.sh  retrieve-data.lua  test_scheduler.c
admin/wayru-os-services/: Makefile
admin/wayru-os-services/files/: update-config.sh  wayru-os-services
admin/wayru-os-services/source/: main.c
apps/agent/: UBUS_IMPLEMENTATION_SUMMARY.md  UBUS_QUICK_START.md  UBUS_README.md  main.c  ubus.md
apps/agent/examples/: ubus_integration_example.c
apps/agent/scripts/dev/: fry-agent.config  get-mac.sh  get-osname.sh  get-public-ip.sh  nds-clients.sh  nds-set-binauth.lua  network-set-mac.lua  retrieve-data.lua  run_sysupgrade.sh  run_sysupgrade_test.sh  sign_cert.sh  wayru-agent.config
apps/agent/scripts/openwrt/: fry-agent.config  fry-agent.init  get-mac.sh  get-public-ip.sh  nds-binauth.sh  nds-deauth.sh  nds-set-binauth.lua  network-set-mac.lua  retrieve-data.lua  run_opkg_upgrade.sh  run_sysupgrade.sh  run_sysupgrade_test.sh  sign_cert.sh  verify_firmware.sh  wayru-agent.config  wayru-agent.init
apps/agent/services/: access_token.c  access_token.h  collector.c  collector.h  commands.c  commands.h  device-context.c  device-context.h  device_info.c  device_status.c  device_status.h  did-key.c  end_report.c  exit_handler.c  firmware_upgrade.c  firmware_upgrade.h  gen_id.c  gen_id.h  monitoring.c  monitoring.h  nds.c  nds.h  package_update.c  package_update.h  radsec_cert.c  radsec_cert.h  reboot.c  reboot.h  registration.c  registration.h  site-clients.c  speedtest.c  speedtest.h  time_sync.c  time_sync.h  ubus_client.c  ubus_client.h  ubus_server.c  ubus_server.h
apps/agent/services/config/: config.c  defaults.c  defaults.h  uci_parser.c  uci_parser.h
apps/agent/services/diagnostic/: diagnostic.c  diagnostic.h
apps/agent/services/mqtt/: cert.c  mqtt.c  mqtt.h
apps/agent/tools/: Makefile  test_ubus.sh  ubus_test.c
apps/collector/: README.md  collect.c  collect.h  config.c  config.h  main.c  multi-threaded.md  ubus.c  ubus.h
apps/config/: config.c  config.example.json  config.h  main.c  ubus.c  ubus.h
apps/config/examples/: config-operator-layer.example.json  config.example.json  device_config.example.json  renderer-with-uci.c  renderer-with-uci.lua  renderer-with-uci.uc  uci.example
apps/config/renderer/: config.example.json  renderer.c  renderer.h
apps/config/sync/: openwisp_manager.c  openwisp_manager.h  rollback.c  rollback.h  sync.c  sync.h  token_manager.c  token_manager.h
apps/health/: main.c
docs/: agent_ubus_quickstart.md  agent_ubus_readme.md  debugging_openwrt.md  dependency_libubox.md  dependency_libubus_and_ubus.md  dependency_ubox.md  dependency_ubus.md  firmware_services.excalidraw  hashed_configurations.md  pending_configurations.md  scheduler_migration.md  uloop_scheduler.md
examples/: Makefile  scheduler_example  scheduler_example.c
examples/wayru-os-services/: Makefile
examples/wayru-os-services/files/: binauth-accounting.sh  get-id.sh  get-mac-address.sh  update-accounting.sh
examples/wayru-os-services/source/: helloworld.c
lib/core/: console.c  console.h  result.h  retry.c  scheduler.c  scheduler.h  script_runner.c  stats.c  stats.h  uloop_scheduler.c  uloop_scheduler.h
lib/crypto/: cert_audit.c  csr.c  csr.h  key_pair.c  key_pair.h
lib/http/: curl_helpers.c  http-requests.c
source/: main.c  scheduler.c  scheduler.h  script_runner.c  script_runner.h  server.c  server.h  shared_store.h
source/certificates/: ca.crt
source/lib/: cert_audit.c  cert_audit.h  console.c  console.h  csr.c  csr.h  curl_helpers.c  curl_helpers.h  http-requests.c  http-requests.h  key_pair.c  key_pair.h  network_check.c  network_check.h  requests.c  requests.h  result.c  result.h  retry.c  retry.h  scheduler.c  scheduler.h  script_runner.c  stats.c  stats.h  websocket.c  websocket.h
source/scripts/dev/: conf.sh  generate-key-pair-example.sh  get-brand.sh  get-id.sh  get-model.sh  get-uuid.sh  nds-binauth-custom.sh  nds-binauth.sh  nds-clients.sh  nds-deauth.sh  nds-preemptive-list.lua  nds-set-preemptive-list.lua  network-mac.lua  verify_firmware.sh  wayru-os-services.config
source/scripts/openwrt/: conf.sh  disable-default-wireless.sh  get-brand.sh  get-model.sh  get-osname.sh  get-uuid.sh  nds-binauth-custom.sh  nds-binauth.sh  nds-clients.sh  nds-preemptive-list.lua  nds-set-preemptive-list.lua  network-mac.lua  run_opkg_upgrade.sh  run_sysupgrade.sh  run_sysupgrade_test.sh  sign_cert.sh  wayru-os-services-dev.config  wayru-os-services.config  wayru-os-services.init
source/services/: access.c  access.h  access_token.c  access_token.h  accounting.c  accounting.h  callbacks.h  collector.c  collector.h  commands.c  commands.h  config.c  config.h  device-context.c  device-context.h  device_data.c  device_data.h  device_info.c  device_info.h  device_status.c  device_status.h  diagnostic.c  diagnostic.h  did-key.c  did-key.h  end_report.c  end_report.h  env.c  env.h  exit_handler.c  exit_handler.h  firmware_upgrade.c  firmware_upgrade.h  gen_id.c  gen_id.h  init.c  init.h  monitoring.c  monitoring.h  mqtt-cert.c  (+31 more)
source/services/config/: config.c  config.h  defaults.c  defaults.h  uci_parser.c  uci_parser.h
source/services/diagnostic/: diagnostic.c  diagnostic.h
source/services/mqtt/: cert.c  cert.h  mqtt.c  mqtt.h
source/store/: config.c  config.h  state.c  state.h
source/utils/: console.c  console.h  generate_id.c  generate_id.h  key_pair.c  key_pair.h  read_os_version.c  read_os_version.h  read_services_version.c  read_services_version.h  requests.c  requests.h  script_runner.c  script_runner.h
tools/: beargen.sh  compdb.sh  dev.sh  run.sh  test-collector-config.sh
tools/compile/: builds.toml  compile.go  go.mod  go.sum  release.sh
tools/format/: .clang-format  format.sh
(+23 files in other folders)
